replaced Double.valueOf/parseDouble with utility method